err/treedb.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/TreeDB'...
Listing './lib/python3.5/site-packages/TreeDB/common'...
Listing './lib/python3.5/site-packages/TreeDB/core'...
Compiling './lib/python3.5/site-packages/TreeDB/core/DB.py'...
***   File "./lib/python3.5/site-packages/TreeDB/core/DB.py", line 35
    print 'execute sql: {0}  failed, error: {1} '.format(sql, err)
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/TreeDB/core/DBPool.py'...
***   File "./lib/python3.5/site-packages/TreeDB/core/DBPool.py", line 21
    print 'Error init_connection: {}'.format(err)
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/TreeDB/core/DBPoolManager.py'...
***   File "./lib/python3.5/site-packages/TreeDB/core/DBPoolManager.py", line 49
    print 'register pool failed'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/TreeDB-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/mysql'...
Listing './lib/python3.5/site-packages/mysql/connector'...
Listing './lib/python3.5/site-packages/mysql/connector/django'...
Listing './lib/python3.5/site-packages/mysql/connector/fabric'...
Listing './lib/python3.5/site-packages/mysql/connector/locales'...
Listing './lib/python3.5/site-packages/mysql/connector/locales/eng'...
Listing './lib/python3.5/site-packages/mysql_connector_python-8.0.5.dist-info'...
Listing './lib/python3.5/site-packages/mysqlx'...
Listing './lib/python3.5/site-packages/mysqlx/locales'...
Listing './lib/python3.5/site-packages/mysqlx/locales/eng'...
Listing './lib/python3.5/site-packages/mysqlx/protobuf'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
